--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "custom-env": "^2.0.1",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
