--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.309.0",
+    "aws-sdk": "^2.1353.0",
     "custom-env": "^2.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
